<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="info_app_desc">专为有声书打造的播放器， Fork 自 Auxio</string>
    <string name="lbl_indexer">Music loading</string>
    <string name="lbl_indexing">Loading music</string>
    <string name="lbl_observing">Monitoring music library</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_all_songs">All songs</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_album_live">Live album</string>
    <string name="lbl_album_remix">Remix album</string>
    <string name="lbl_eps">EPs</string>
    <string name="lbl_ep">EP</string>
    <string name="lbl_ep_live">Live EP</string>
    <string name="lbl_ep_remix">Remix EP</string>
    <string name="lbl_singles">Singles</string>
    <string name="lbl_single">Single</string>
    <string name="lbl_single_live">Live single</string>
    <string name="lbl_single_remix">Remix single</string>
    <string name="lbl_compilations">Compilations</string>
    <string name="lbl_compilation">Compilation</string>
    <string name="lbl_compilation_live">Live compilation</string>
    <string name="lbl_compilation_remix">Remix compilation</string>
    <string name="lbl_soundtracks">Soundtracks</string>
    <string name="lbl_soundtrack">Soundtrack</string>
    <string name="lbl_mixtapes">Mixtapes</string>
    <string name="lbl_mixtape">Mixtape</string>
    <string name="lbl_demo">Demo</string>
    <string name="lbl_demos">Demos</string>
    <string name="lbl_mixes">DJ Mixes</string>
    <string name="lbl_mix">DJ Mix</string>
    <string name="lbl_live_group">Live</string>
    <string name="lbl_remix_group">Remixes</string>
    <string name="lbl_appears_on">Appears on</string>
    <string name="lbl_artist">Artist</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_folder">Folder</string>
    <string name="lbl_folders">Folders</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_new_playlist">New playlist</string>
    <string name="lbl_empty_playlist">Empty playlist</string>
    <string name="lbl_imported_playlist">Imported playlist</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_import_playlist">Import playlist</string>
    <string name="lbl_export">Export</string>
    <string name="lbl_export_playlist">Export playlist</string>
    <string name="lbl_rename">Rename</string>
    <string name="lbl_set_cover">Set cover</string>
    <string name="lbl_clear_cover">Clear cover</string>
    <string name="lng_playlist_cover_set">Playlist cover updated</string>
    <string name="lng_playlist_cover_cleared">Playlist cover cleared</string>
    <string name="err_playlist_cover_failed">Unable to set playlist cover</string>
    <string name="lbl_rename_playlist">Rename playlist</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_confirm_delete_playlist">Delete playlist?</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_filter_all">All</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_song_count">Song count</string>
    <string name="lbl_disc">Disc</string>
    <string name="lbl_track">Track</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_sort_mode">Sort by</string>
    <string name="lbl_sort_direction">Direction</string>
    <string name="lbl_sort_asc">Ascending</string>
    <string name="lbl_sort_dsc">Descending</string>
    <string name="lbl_playback">Now playing</string>
    <string name="lbl_playback_settings">Playback settings</string>
    <string name="lbl_reset_play_history">Reset play history</string>
    <string name="lng_play_history_reset">Play history cleared</string>
    <string name="lbl_equalizer">Equalizer</string>
    <string name="lng_equalizer_desc">Open the system equalizer</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_repeat_mode">Repeat</string>
    <string name="lbl_repeat_off">Off</string>
    <string name="lbl_repeat_all">Repeat all</string>
    <string name="lbl_repeat_one">Repeat one</string>
    <string name="lbl_on">On</string>
    <string name="lbl_off">Off</string>
    <string name="lbl_playback_speed">Playback speed</string>
    <string name="lbl_last_progress">Continue</string>
    <string name="desc_last_progress">Resume from last progress</string>
    <string name="lng_no_playlist_progress">No saved progress for this playlist</string>
    <string name="lbl_queue">Queue</string>
    <string name="lbl_play_next">Play next</string>
    <string name="lbl_queue_add">Add to queue</string>
    <string name="lbl_playlist_add">Add to playlist</string>
    <string name="lbl_artist_details">Go to artist</string>
    <string name="lbl_album_details">Go to album</string>
    <string name="lbl_song_detail">View properties</string>
    <string name="lbl_parent_detail">View</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_props">Song properties</string>
    <string name="lbl_path">Path</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_bitrate">Bit rate</string>
    <string name="lbl_sample_rate">Sample rate</string>
    <string name="lbl_replaygain_track">ReplayGain track adjustment</string>
    <string name="lbl_replaygain_album">ReplayGain album adjustment</string>
    <string name="lbl_shuffle_shortcut_short">Shuffle</string>
    <string name="lbl_shuffle_shortcut_long">Shuffle all</string>
    <string name="lbl_start_playback">Start playback</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_more">More</string>
    <string name="lbl_path_style">Path style</string>
    <string name="lbl_path_style_absolute">Absolute</string>
    <string name="lbl_path_style_relative">Relative</string>
    <string name="lbl_windows_paths">Use Windows-compatible paths</string>
    <string name="lbl_about">About</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_code">Source code</string>
    <string name="lbl_wiki">Wiki</string>
    <string name="lbl_licenses">Licenses</string>
    <string name="lbl_original_project">Original project (Auxio)</string>
    <string name="lbl_library_counts">Library statistics</string>
    <string name="lbl_selection">Selection</string>
    <string name="lbl_error_info">Error information</string>
    <string name="lbl_copied">Copied</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_author_name">Qzrzz</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_github">Make an issue on GitHub</string>
    <string name="lbl_email">Send an email</string>
    <string name="lbl_x">X (Twitter)</string>
    <string name="lbl_bilibili">Bilibili</string>
    <string name="lbl_donate">Donate</string>
    <string name="lbl_supporters">Supporters</string>
    <string name="lng_widget">View and control music playback</string>
    <string name="lng_indexing">Loading your music library…</string>
    <string name="lng_observing">Monitoring your music library for changes…</string>
    <string name="lng_queue_added">Added to queue</string>
    <string name="lng_play_next">Song will play next</string>
    <string name="lng_playlist_created">Playlist created</string>
    <string name="lng_playlist_imported">Playlist imported</string>
    <string name="lng_playlist_renamed">Playlist renamed</string>
    <string name="lng_playlist_exported">Playlist exported</string>
    <string name="lng_playlist_deleted">Playlist deleted</string>
    <string name="lng_playlist_added">Added to playlist</string>
    <string name="lng_supporters_promo">Donate to the project to get your name added here!</string>
    <string name="lng_search_library">Search your library…</string>
    <string name="lng_tasker_start">
        Starts AuBookPlayer using the previously saved state. If no saved state is available, all songs will be shuffled. Playback will start immediately.
        \n\nWARNING: Be careful controlling this service, if you close it and then try to use it again, you will probably crash the app.
    </string>
    <string name="lng_empty_songs">Your songs will show up here.</string>
    <string name="lng_empty_albums">Your albums will show up here.</string>
    <string name="lng_empty_artists">Your artists will show up here.</string>
    <string name="lng_empty_genres">Your genres will show up here.</string>
    <string name="lng_empty_playlists">Your playlists will show up here.</string>
    <string name="lng_empty_folders">Your folders will show up here.</string>
    <string name="lng_file_picker">Load music from the folders that you select. Slower, but more reliable. Requires the vanilla file manager app to be installed.</string>
    <string name="lng_system_database">Load music that the Android OS automatically detects. Faster, but less reliable. No support for filesystem-dependent features like cover.jpg.</string>
    <string name="lng_grant_storage_anyway">Granting external storage permissions can fix issues on some devices.</string>
    <string name="lng_grant_storage_required">Grant external storage permissions to enable this option.</string>
    <string name="lng_include_folders">Music outside of the selected folders will be ignored.</string>
    <string name="lng_exclude_folders">Music inside the selected folders will be ignored.</string>
    <string name="set_root_title">Settings</string>
    <string name="set_ui">Look and feel</string>
    <string name="set_ui_desc">Change the theme and colors of the app</string>
    <string name="set_theme">Theme</string>
    <string name="set_theme_auto">Automatic</string>
    <string name="set_theme_day">Light</string>
    <string name="set_theme_night">Dark</string>
    <string name="set_accent">Color scheme</string>
    <string name="set_black_mode">Black theme</string>
    <string name="set_black_mode_desc">Use a pure black dark theme</string>
    <string name="set_round_mode">Round mode</string>
    <string name="set_round_mode_desc">Enable rounded corners on additional UI elements (requires album covers to be rounded)</string>
    <string name="set_personalize">Personalize</string>
    <string name="set_personalize_desc">Customize UI controls and behavior</string>
    <string name="set_display">Display</string>
    <string name="set_lib_tabs">Library tabs</string>
    <string name="lbl_sleep_timer">Sleep timer</string>
    <string name="lbl_sleep_timer_off">Off</string>
    <string name="lbl_skip_head_tail">Skip head / tail</string>
    <string name="lbl_skip_head_tail_off">Off</string>
    <string name="lbl_skip_head">Skip intro</string>
    <string name="lbl_skip_tail">Skip outro</string>
    <string name="lng_skip_head_tail_desc">Skip the start and end of each track. Saved per playlist.</string>
    <string name="fmt_skip_seconds_off">Off</string>
    <string name="desc_skip_decrease">Decrease by 1 second</string>
    <string name="desc_skip_increase">Increase by 1 second</string>
    <string name="lbl_skip_smart">Smart detect</string>
    <string name="lng_skip_smart_desc">Compare nearby tracks to find shared intro/outro</string>
</resources>